Fix project group description alignment

--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -8,6 +8,14 @@
       display: inline-block;
       margin-left: 20px;
     }
+
+    @media screen and (max-width: $container-sm) {
+      .description {
+        display: block;
+        margin-top: 5px;
+        margin-left: 0;
+      }
+    }
   }
 }
 
